@@ -6,6 +6,8 @@
     * Implemented "Find" functionality to search through the text 
       view.
 
+    * Implemented "Print Selection..." to print print selected text. 
+      Currently works only on rectangular selections.
 
 2003-05-12	ujwal
 
